k8s/policies/team-backend.yaml
---
# allow nginx + prometheus ingress > api
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api
  namespace: team-backend
spec:
  podSelector:
    matchLabels:
      app: api
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: system
      podSelector:
        matchLabels:
          app: nginx-ingress
          component: controller
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
---
# allow all ingress > prometheus > alertmanager egress
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus
  namespace: team-backend
spec:
  podSelector:
    matchLabels:
      app: prometheus
  ingress:
  - from:
    # loopback
    - podSelector:
        matchLabels:
          app: prometheus
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: alertmanager
          alertmanager: team-backend-prometheus
  - to:
    - podSelector:
        matchLabels:
          app: api
---
# allow prometheus ingress > alertmanager
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-alertmanager
  namespace: team-backend
spec:
  podSelector:
    matchLabels:
      app: alertmanager
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
